# pfs_obsproc_planning_tools

./: .gitattributes  .gitignore  .gitmodules  README.md  README_ssp.md  pyproject.toml  requirements-202506.txt  requirements.txt
docs/: config.md  overview.md
examples/: GUI_tutorial_v0.md  README.md  config_example.toml  package_config_example-20260306.toml  package_config_example.toml  test_ppp_qplanner_sfa_scripting.py  test_ppp_qplanner_sfa_scripting_gui.py  test_ppp_qplanner_sfa_scripting_ssp.py
examples/workdir_template/: config.toml
examples/workdir_template/templates/: template_pfs_v2023-09-12.ope  template_pfs_v2024-03-05_singleExptime.ope
notebooks/: example_notebook.ipynb  example_ppp+qplan+sfa.ipynb  test_ppp+qplanner_20230905.ipynb
python/obsproc/planning/: PPP.py  SFA.py  generatePfsDesign.py  opefile.py  qPlan.py
scripts/: pfs_packages.py
src/pfs_obsproc_planning/: GUI.py  PPP.py  PPP_queue.py  SFA.py  __init__.py  completion_check.py  generatePfsDesign.py  generatePfsDesign_ssp.py  opefile.py  plotPfsDesign.py  qPlan.py  ssp_design.ipynb  validation.py
src/pfs_obsproc_planning/GUI/: GUI.py  __init__.py
src/pfs_obsproc_planning/GUI/GUI_window/: mainWindow.ui
src/pfs_obsproc_planning/GUI_window/: configWindow.ui  mainWindow.ui  proposalWindow.ui
src/pfs_obsproc_planning/make_config_ui/: pfs_config_app.py
src/pfs_obsproc_planning/utils/: __init__.py  build_target.py  classic_for_single_proposal.py  completion_check.py  db_query.py  make_opefile.py  pfs_packages.py  plot_pfsDesign.py  run_PPP.py  run_SFA.py  run_for_classic.py  run_for_queue.py  run_netflow.py  run_qPlan.py  validation.py
src/pfs_obsproc_planning/validation_ui/: pfs_day_plan_app.py  styles.css
tmp/: test_ppp_qplanner_sfa_scripting.py
